--- a/docs/team/zsoh97.adoc
+++ b/docs/team/zsoh97.adoc
@@ -27,6 +27,8 @@ https://nus-cs2103-ay1920s2.github.io/tp-dashboard/#search=zsoh97&sort=totalComm
 ** What it does: Allowed users to save and load their data when using the project.
 ** Highlights: The implementation of the storage was a bottleneck for our team project as in order to
 implement and test the functionalities of our features, developers had to have data to work with.
++
+This was a challenging task as the functionality of our app required the storage to work and I had to figure it out so fast so my team could meet the assigned deadline. The task involved understanding of how data was originally stored in address book in json file which I have previously read up on, but was not completely familiar with. As a result, I had to trace the entire workings of the program in order to figure out the project.
 
 * *Major Enhancement:* Implemented the Itinerary page (with Nguyen).
 ** What it does: Allows users to view and manipulate the itinerary activities in the application.
@@ -37,7 +39,7 @@ implement and test the functionalities of our features, developers had to have d
 
 * *Major Enhancement:* Implemented the GUI for the application.
 
-* *Testing:* Did JUnit testing for `ITINERARY` (with Zeke)
+* *Testing:* Did JUnit testing for `ITINERARY` (with Nguyen)
 ** Highlights: I added JUnit tests for itinerary's commands and parsers, while Zeke
 added JUnit tests for itinerary's model and storage.
 
@@ -56,11 +58,18 @@ added JUnit tests for itinerary's model and storage.
 
 === Contributions to Developer Guide
 ==== Sections Written
-*gotoBackCommand sequence diagram for Views in Volant.
-*UML diagram for storage component.
-*UML diagram for delete command.
-*UML diagram for refresh command.
-*UML diagram for storage when adding a new trip.
-*UML diagram for storage when adding a new activity.
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#Design-Storage[3.5 Storage component]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#adding-a-trip-in-home-page[4.3. Adding a trip in Home Page]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#sorting-entries-in-journal-page[4.4. Sorting Entries in `JOURNAL` Page]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#deleting-trip-in-home-page[4.5. Deleting Trip in `HOME` Page]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#refreshing-trips-in-home-page[4.8. Refreshing trips in `HOME` page]
+
+==== Diagrams
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#Design-Architecture[Figure 4. Component interactions for `goto 1` command in the `HOME` page view.]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#Design-Storage[Figure 11. Structure of the Storage Component]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#deleting-trip-in-home-page[Figure 15. Activity Diagram for `delete` Command]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#refreshing-trips-in-home-page[Figure 18. Activity Diagram for `rf` Command]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#data-storage[Figure 20. Activity diagram for adding a new trip]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/DeveloperGuide.html#data-storage[Figure 21. Activity diagram for adding a new activity]
 
 _{To be updated in the future}_
