Update Ranice's PPP (#274)
* Fix bugs from PR #165

* Update SampleDataUtil.java


Fix bug for missing invalid goto command exception on the Trip page

* Fix command feedback messages

* Fix result display bugs

Fix %s bug from returning to trip page from itinerary page

Standardize format for result display text for all command usage messages 

Remove `list` command
Fix result display bugs

* Implement refresh command

* Make elements on home page scroll together

* Touch up GUI

Update Ui.png

* Implement help window for home page

Touched up user guide
Fix build fail

* Add some screenshots to user guide

* Fix travis build fail

* Update user guide with screenshots

* Update user guide with data storage screenshot

* Update user guide with data storage screenshot

* Update icons in asciidoctor.css

* Update tip icon

* Fix journal GUI

* Remove tutorial images

* Update screenshots

* Update screenshots

* Update screenshots

* Add screenshots to user guide

* Implement help windows


Implement help windows

* Fix GUI bugs

* Clean up code

* Update diagrams in DG

* Optimize imports

* Fix screenshots in UG

* Fix build errors

* Fix itinerary delete bug

* Remove AB3 diagrams, Add navigation cheatsheet, Update Ranice's PPP

* Change width of navigation summary diagram

* Fix UG screenshots

* Fix GUI bug on HOME page

* Update implementation in DG

* Add class diagram for home page model

* Update sequence diagram in DG

* Update DG

* Update Ranice's PPP

* Update AboutUs.adoc and Ranice's PPP

* Update Ranice's PPP

--- a/docs/team/raniceyue.adoc
+++ b/docs/team/raniceyue.adoc
@@ -56,7 +56,7 @@ from the keyboard.
 ====
 *Map of Navigation Commands* +
 
-image::{imagesDir}/navigation-cheatsheet.png[width="800"]
+image::navigation-cheatsheet.png[width="800"]
 ====
 
 * *Major Enhancement:* Implemented Home Page of application +
@@ -85,9 +85,10 @@ what commands can be used on the page they are specifically on.
 === Contributions to User Guide
 ==== Sections Written
 * Created all screenshots and diagrams in the User Guide.
-* https://ay1920s2-cs2103t-f09-4.github.io/main/UserGuide.html#quick-start[2. Quick Start]
-* https://ay1920s2-cs2103t-f09-4.github.io/main/UserGuide.html#universal-commands[4.3 Universal Commands]
-* https://ay1920s2-cs2103t-f09-4.github.io/main/UserGuide.html#glossary[7. Glossary]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/UserGuide.html#quick-start-ranice[2. Quick Start]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/UserGuide.html#universal-commands-ranice[4.3 Universal Commands]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/UserGuide.html#glossary-ranice[7. Glossary]
+
 
 === Contributions to Developer Guide
 ==== Sections Written
