--- a/docs/team/zsoh97.adoc
+++ b/docs/team/zsoh97.adoc
@@ -51,9 +51,9 @@ added JUnit tests for itinerary's model and storage.
 === Contributions to User Guide
 ==== Sections Written
 * Transferred early stage user guide in google doc to adoc.
-* https://github.com/AY1920S2-CS2103T-F09-4/main/blob/master/docs/UserGuide.adoc#1-introduction[Section 1. Introduction]
-* https://github.com/AY1920S2-CS2103T-F09-4/main/blob/master/docs/UserGuide.adoc#3-features[Section 3. Features]
-* https://github.com/AY1920S2-CS2103T-F09-4/main/blob/master/docs/UserGuide.adoc#commands-for-the-home-page[Section 4.4. Commands for the Home Page]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/UserGuide.html#introduction-zeke[Section 1. Introduction]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/UserGuide.html#Features[Section 3. Features]
+* https://ay1920s2-cs2103t-f09-4.github.io/main/UserGuide.html#commands-for-the-home-page-zeke[Section 4.4. Commands for the Home Page]
 * Formatted command summary to table form
 
 === Contributions to Developer Guide
