Fix DG bugs (#275)
* Fix bugs from PR #165

* Update SampleDataUtil.java


Fix bug for missing invalid goto command exception on the Trip page

* Fix command feedback messages

* Fix result display bugs

Fix %s bug from returning to trip page from itinerary page

Standardize format for result display text for all command usage messages 

Remove `list` command
Fix result display bugs

* Implement refresh command

* Make elements on home page scroll together

* Touch up GUI

Update Ui.png

* Implement help window for home page

Touched up user guide
Fix build fail

* Add some screenshots to user guide

* Fix travis build fail

* Update user guide with screenshots

* Update user guide with data storage screenshot

* Update user guide with data storage screenshot

* Update icons in asciidoctor.css

* Update tip icon

* Fix journal GUI

* Remove tutorial images

* Update screenshots

* Update screenshots

* Update screenshots

* Add screenshots to user guide

* Implement help windows


Implement help windows

* Fix GUI bugs

* Clean up code

* Update diagrams in DG

* Optimize imports

* Fix screenshots in UG

* Fix build errors

* Fix itinerary delete bug

* Remove AB3 diagrams, Add navigation cheatsheet, Update Ranice's PPP

* Change width of navigation summary diagram

* Fix UG screenshots

* Fix GUI bug on HOME page

* Update implementation in DG

* Add class diagram for home page model

* Update sequence diagram in DG

* Update DG

* Update Ranice's PPP

* Update AboutUs.adoc and Ranice's PPP

* Update Ranice's PPP

* Fix DG bugs

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -423,7 +423,7 @@ image::FindItinerary.png[align="center"]]
 The following activity diagram summarises what happens when a user executes a sort journal command:
 
 .Activity Diagram for `sort` Command
-image::SortActivityDiagram.png[align="center"]]
+image::sortActivityDiagram.png[align="center"]
 
 === Deleting Trip in Home Page
 
