--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -423,7 +423,7 @@ image::FindItinerary.png[align="center"]]
 The following activity diagram summarises what happens when a user executes a sort journal command:
 
 .Activity Diagram for `sort` Command
-image::sortActivityDiagram.png[align="center"]
+image::SortActivityDiagram.png[align="center"]
 
 === Deleting Trip in Home Page
 
